#                    "Merged from", "Cleanup", "Issue"                         #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789
-----------------+-----------+--------------------------------------------------

RH-2009-10-26-0: Enhancem:   Hedeby: o New use case test cloud_preheat
                                     o Opt methods for create_..._slo
                 Enhancem:   New method submit_sleeper_job in sge_procedures.tcl
                 Review:     TB

MG-2009-10-26-0: Bugfix:     Now its possible to build cloud adapter with SDM ts
                 Review:     RH

CR-2009-10-26-0: Bugfix:     o fixed host aliases test
                 Review:     LP

TB-2009-10-23-0: Enhancem.:  o added SDM test for RFE issue 687:
                               resources/purge/check.62.exp
                             o added SDM test for move resource from serviceA
                               to serviceA:
                               resources/move/same_service/check.62.exp
                             o new SDM cloud helper function
                               hedeby_change_gef_action
                 Bugfix:     Fixed changed bundle strings
                 Review:     RH

RH-2009-10-22-0: Bugfix:     Hedeby
                             o Issue 551 test improved
                             o tcl error in permanentRequestSLO test fixed
                 Review:     TB

LP-2009-10-22-0: Bugfix:     Made host_aliases test unsupported for loghost
                             alias, cannot shutdown scheduler otherwise
                 Review:     JO

RH-2009-10-22-0: Bugfix:     Hedeby:
                             o file_permission test ignores files in log directory
                             o issue_684 test checks that tmp dir of removed service